# egoist.ai

./: .env.example  .replit  INSTALLATION.md  LICENSE  README.md  app.py  audio_generator.py  audio_handler.py  database.py  image_handler.py  pyproject.toml  replit.md  setup.py  setup_requirements.txt  therapy_bot.py
